# tap-inriver

./: .gitignore  README.md  pyproject.toml
tap_inriver/: __init__.py  client.py  schema_builder.py  streams.py  tap.py
